--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0",
