--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "gulp-concat": "^2.6.1",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "main-bower-files": "^2.13.1"
   }
 }
